<resources>
    <string name="app_name">Estresor</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navegador</string>
    <string name="action_settings">Cerrar sesión</string>

    // ************** Strings del Menú *****************
    //Submenu Principal
    <string name="menu_inicio">Inicio</string>
    <string name="menu_gráficas">Gráficas</string>
    <string name="menu_comunicación">Comunicación</string>

    //Submenu Extras
    <string name="menu_configurar_cuenta">Cuenta</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_eliminar">Eliminar Cuenta</string>
    // ****************************** ****************************** ******************************
    //

    // ************************* Mensajes de Error para el Inicio de Sesión
    ************************* //
    <string name="InicioSesion">Se inició sesión correctamente</string>
    <string name="ErrorBoleta">Boleta incorrecta</string>
    <string name="BoletaNoRegistrada">La boleta no ha sido registrada, registrála ahora</string>
    <string name="ErrorContraseña">Contraseña incorrecta</string>

    // ****************************** ****************************** ******************************
    //

    // ************************* Mensajes de Error para la validadción de un registro
    ************************* //
    // Mensajes de Error para la Boleta
    <string name="SinBoleta">No se ingresó ninguna Boleta</string>
    <string name="BoletaNoEncontrada">No se ha encontrado la boleta en la base de datos</string>
    <string name="LongBoleta">La boleta debe de tener una longitud de 10 carácteres</string>
    // Mensajes de Error para el Nombre
    <string name="SinNombre">No se ingresó ningún Nombre</string>
    // Mensajes de Error para la Edad
    <string name="SinEdad">No se ha ingresado la Edad</string>
    <string name="RangoEdad">La Edad debe de estar en un rango de 20 a 25 años</string>
    // Mensajes de Erro para el Semestre
    <string name="SinSemestre">No se ha seleccionado un semestre</string>
    // Mensaje de Error para la Unidad de Aprendizaje
    <string name="SinMateria">No se ha Seleccionado una unidad de aprendizaje</string>
    // Mensaje de Error para el Nivel Basal de HR
    <string name="SinNivelBasalHR">No se ha Introducido un Nivel Basal para HR</string>
    // Mensaje de Error para el Nivel Basal de GSR
    <string name="SinNivelBasalGSR">No se ha Introducido un Nivel Basal para GSR</string>
    <string name="NivelBasalCero">El nivel Basal no puede ser cero (0) </string>

    // Condiciones para aceptar una contraseña
    <string name="SinContraseña">No se ha ingresado ninguna contraseña</string>
    <string name="SinSeguridad">La contraseña debe contener un carácter especial (@#$%^+=), una minúscula, una mayúscula, un número y una longitud de entre 8 a 15 carácteres</string>
    <string name="error_too_short_password">La contraseña no tiene la longitud adecuada</string>
    <string name="error_not_find_special_caracter">No se detectó algún carácter especial (!@#$%^*+=¿?_)</string>
    <string name="error_not_find_number">No se detectó algun número</string>
    <string name="error_not_find_lowercase_caracter">No se detectó ninguna minúscula</string>
    <string name="error_not_find_uppercase_caracter">No se detectó ninguna Mayúscula</string>

    // ****************************** ****************************** ******************************
    //

    // ************************* Mensajes de Error para la validadción de Inicio de Sesión
    ************************* //
    <string name="InicioCorrecto">Se insertó correctamente</string>
    <string name="BoletaRegistrada">La boleta ya fue registrada</string>

    // ****************************** ****************************** ******************************
    //

    // ************************* Mensajes de Error para actualizar la contraseña
    ************************* //
    <string name="ActualizoCorrectamente">Se insertó correctamente</string>

    // ****************************** ****************************** ******************************
    //

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="conectar_bluetooth">Conectar Bluetooth</string>

    <string name="la_contrase_a_debe_contener">La contraseña debe contener:</string>
    <string name="_1_numero">1 Número</string>
    <string name="_1_caracter_especial">1 Caracter Especial</string>
    <string name="_1_may_scula">1 Mayúscula</string>
    <string name="_1_minuscula">1 Minúscula</string>

    <!-- Strings de los datos personales, registro, cambio de contraseña, inicio de sesión y de configurar cuenta-->
    <string name="boleta">Boleta</string>
    <string name="contrasena">Contraseña</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="Debe_Contener_1_Numero">1 Número</string>
    <string name="Caracter_Especial">1 Carácter Especial</string>
    <string name="mayuscula">1 Mayúscula</string>
    <string name="Minuscula">1 Minúscula</string>
    <string name="Longitud_de_8_15_Caracteres">Longitud de 8–15 Carácteres</string>

    <!-- Strings para los botones -->
    <string name="Aceptar">Aceptar</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>

    <!-- Strings Inicio de sesión -->
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>

    <!-- Strings Registro -->
    <string name="nombre_completo">Nombre completo</string>
    <string name="edad">Edad</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="semestre">Semestre</string>
    <string name="la_contrasena_debe_contener">La contraseña debe contener:</string>
    <string name="nivel_basal_hr">Nivel Basal HR</string>
    <string name="nivel_basal_gsr">Nivel Basal GSR</string>
    <string name="habilitar_nivel_basal">Habilitar Edición Nivel Basal</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="herramientas">Herramientas</string>
    <string name="registros">Registros</string>
    <string name="graficar">Graficar</string>
    <string name="analizar">Analizar</string>
    <string name="graficar_y_analizar">Analizar y Graficar</string>
    <string name="eliminar">Eliminar</string>
    <string name="name_registro">Name_Registro</string>
    <string name="imagen_registros">Imagen representativa de los registros obtenidos del usuario</string>

    <!-- Textos de la actividad ConectarBluno-->
    <string name="texto_bluno_conectar_scan">Scan</string>
    <string name="text_bluno_conectar_received_data">Datos Recibidos:</string>
    <string name="text_button_bluno_conectar_send_data">Enviar Datos</string>
    <string name="ext_bluno_conectar_send_data">Área de envio de datos</string>
    <string name="regresar">Regresar</string>
    <string name="estados_de_la_conexion_con_la_pulsera">Estados de la conexión con la pulsera</string>
    <string name="comenzar_terminar_proceso_bluno">boton para iniciar y finalizar un monitoreo</string>
    <string name="restablecer_contrasena">Para restablecer la contraseña se debe ingresar la boleta del usuario y la nueva contraseña</string>
    <string name="eliminarse_la_cuenta">Al eliminarse la cuenta no se podrán recuperar los datos.</string>
    <string name="icono_de_inicio">Ícono de inicio</string>
    <string name="imagen_user">Imagen user</string>
    <string name="id_wearable">id wearable</string>
    <string name="mac_wearable">Mac wearable</string>
    <string name="id_archvivo">Id Archvivo</string>
    <string name="wearables_registrados">Wearables Registrados</string>
    <string name="selecciona_un_wearable_para_eliminar">Selecciona un Wearable para eliminar</string>
    <string name="wearable_eliminar">ID Wearable</string>

    <string name="error_cant_inser_user">Error no se pudo insertar el usuario</string>
    <string name="error_some_fiel_is_wrong">Algún campo es incorrecto revisálos</string>
    <string name="password_recover">Recuperar Contraseña</string>
    <string name="add_image">add Image</string>
    <string name="borrar_wearable">Borrar wearable</string>

</resources>
