<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/scroll"
    tools:context=".actividades.recuperarpassword.RecoverPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/titleText1"
            android:text="@string/password_recover" />

        <TextView
            style="@style/textInputLayoutStyle"
            android:text="@string/restablecer_contrasena" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CBoleta"
            style="@style/textInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/boleta"
                android:importantForAutofill="no"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/textInputLayoutStyle"
            android:text="@string/SinSeguridad" />

        <TextView
            android:id="@+id/CTNumero"
            style="@style/passwordSuggestionText"
            android:text="@string/Debe_Contener_1_Numero" />

        <TextView
            android:id="@+id/CTCaracterEspecial"
            style="@style/passwordSuggestionText"
            android:text="@string/Caracter_Especial" />

        <TextView
            android:id="@+id/CTMayuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/mayuscula" />

        <TextView
            android:id="@+id/CTMinuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/Minuscula" />

        <TextView
            android:id="@+id/CTLongitud"
            style="@style/passwordSuggestionText"
            android:text="@string/Longitud_de_8_15_Caracteres" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CPassword"
            style="@style/textInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nueva_contrasena"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CAceptar"
                style="@style/buttonStyle"
                android:layout_width="@dimen/button_size_width_text"
                android:layout_height="@dimen/button_size_height_text"
                android:text="@string/Aceptar" />

            <Button
                android:id="@+id/CCancel"
                style="@style/buttonStyle"
                android:layout_width="@dimen/button_size_width_text"
                android:layout_height="@dimen/button_size_height_text"
                android:text="@string/cancelar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>