<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CFBoleta"
            style="@style/subTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/boleta"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CFNombre"
            style="@style/textInputLayoutStyle">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/nombre_completo"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CFEdad"
            style="@style/textInputLayoutStyle">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/edad"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/CFTGenero"
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/genero" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/CFMasculino"
                style="@style/subNormalText"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/CFFemenino"
                style="@style/subNormalText"
                android:text="@string/femenino" />

        </RadioGroup>

        <TextView
            android:id="@+id/CFTSemestre"
            style="@style/normalText"
            android:text="@string/semestre" />

        <Spinner
            android:id="@+id/CFSemestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:fadeScrollbars="false"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/CFTContraseña"
            style="@style/normalText"
            android:text="@string/la_contrasena_debe_contener" />

        <TextView
            android:id="@+id/CFNumero"
            style="@style/passwordSuggestionText"
            android:text="@string/Debe_Contener_1_Numero" />

        <TextView
            android:id="@+id/CFMayuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/mayuscula" />

        <TextView
            android:id="@+id/CFMinuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/Minuscula" />

        <TextView
            android:id="@+id/CFCaracterEspecial"
            style="@style/passwordSuggestionText"
            android:text="@string/Caracter_Especial" />

        <TextView
            android:id="@+id/CFLongitud"
            style="@style/passwordSuggestionText"
            android:text="@string/Longitud_de_8_15_Caracteres" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CFPassword"
            style="@style/textInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/textInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/CFAplicar"
            style="@style/buttonStyle"
            android:layout_width="@dimen/button_size_width_text"
            android:layout_height="@dimen/button_size_height_text"
            android:text="@string/aplicar" />

    </LinearLayout>

</ScrollView>