<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/ic_menu_registers"
            android:title="@string/registros" />

        <item android:title="@string/herramientas">

            <menu>

                <item
                    android:id="@+id/nav_configurar_cuenta"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_configurar_cuenta" />

                <item
                    android:id="@+id/nav_eliminar"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="@string/menu_eliminar" />

            </menu>

        </item>

    </group>

</menu>