<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.estres2.ui.inico.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_graficas"
        android:name="com.example.estres2.ui.Graficas.GraficasFragment"
        android:label="@string/menu_gráficas"
        tools:layout="@layout/fragment_graficas" />

    <fragment
        android:id="@+id/nav_comunicación"
        android:name="com.example.estres2.ui.comunicacion.ComunicacionFragment"
        android:label="@string/menu_comunicación"
        tools:layout="@layout/fragment_comunicacion" />

    <fragment
        android:id="@+id/nav_configurar_cuenta"
        android:name="com.example.estres2.ui.cuenta.CuentaFragment"
        android:label="@string/menu_configurar_cuenta"
        tools:layout="@layout/fragment_cuenta"/>

    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.example.estres2.ui.cerrar.CerrarSesionFragment"
        android:label="@string/cerrar_sesion"
        tools:layout="@layout/fragment_cerrar_sesion"/>

    <fragment
        android:id="@+id/nav_eliminar"
        android:name="com.example.estres2.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />
</navigation>