<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/scroll"
    tools:context=".actividades.registrar.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/titleText1"
            android:text="@string/registrar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RBoleta"
            style="@style/textInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/boleta"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RNombre"
            style="@style/textInputLayoutStyle">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/nombre_completo"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/REdad"
            style="@style/textInputLayoutStyle">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/edad"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/RTGenero"
            style="@style/normalText"
            android:text="@string/genero" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RMasculino"
                style="@style/subNormalText"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/RFemenino"
                style="@style/subNormalText"
                android:text="@string/femenino" />

        </RadioGroup>

        <TextView
            android:id="@+id/RTSemestre"
            style="@style/normalText"
            android:text="@string/semestre" />

        <Spinner
            android:id="@+id/RSemestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:fadeScrollbars="true"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/RRContraseña"
            style="@style/normalText"
            android:text="@string/la_contrasena_debe_contener" />

        <TextView
            android:id="@+id/RTNumero"
            style="@style/passwordSuggestionText"
            android:text="@string/Debe_Contener_1_Numero" />

        <TextView
            android:id="@+id/RTMayuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/mayuscula" />

        <TextView
            android:id="@+id/RTMinuscula"
            style="@style/passwordSuggestionText"
            android:text="@string/Minuscula" />

        <TextView
            android:id="@+id/RTCaracterEspecial"
            style="@style/passwordSuggestionText"
            android:text="@string/Caracter_Especial" />

        <TextView
            android:id="@+id/RTLongitud"
            style="@style/passwordSuggestionText"
            android:text="@string/Longitud_de_8_15_Caracteres" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RPassword"
            style="@style/textInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RRegistrar"
                style="@style/buttonStyle"
                android:layout_width="@dimen/button_size_width_text"
                android:layout_height="@dimen/button_size_height_text"
                android:text="@string/registrar" />

            <Button
                android:id="@+id/RCancel"
                style="@style/buttonStyle"
                android:layout_width="@dimen/button_size_width_text"
                android:layout_height="@dimen/button_size_height_text"
                android:text="@string/cancelar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>