<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start">

    <TextView
        android:id="@+id/mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id_wearable"
        style="@style/subNormalText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mmac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mac_wearable"
        style="@style/subNormalText"
        app:layout_constraintEnd_toStartOf="@id/m_borrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mid" />

    <ImageView
        android:id="@+id/m_borrar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/mid"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/scroll"
        android:contentDescription="@string/borrar_wearable" />

</androidx.constraintlayout.widget.ConstraintLayout>